feat: 添加路由、约定动态路由方式，增加README.md

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite --host",
     "build": "vite build",
     "build-gzip": "vite build --mode gzip",
     "build-analyze": "vite build --mode analyzer",
