--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@9.8.0",
+  "engines": {
+    "node": ">=20.17.0"
+  },
   "scripts": {
     "dev": "vite",
     "start": "vite --host",
