--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.3.3",
     "rollup-plugin-bundle-analyzer": "^1.6.6",
+    "vconsole": "^3.15.1",
     "vite": "^5.4.1",
     "vite-plugin-compression": "^0.5.1"
   },
