--- a/biome.json
+++ b/biome.json
@@ -3,6 +3,9 @@
 	"organizeImports": {
 		"enabled": true
 	},
+	"files": {
+		"include": ["src/*", "types/*"]
+	},
 	"linter": {
 		"enabled": true,
 		"rules": {
