--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@biomejs/biome": "1.8.3",
 		"@commitlint/cli": "^19.5.0",
 		"@commitlint/config-conventional": "^19.5.0",
+		"@vant/auto-import-resolver": "^1.2.1",
 		"@vitejs/plugin-vue": "^5.1.3",
 		"amfe-flexible": "^2.2.1",
 		"husky": "^9.1.6",
@@ -36,6 +37,8 @@
 		"rollup-plugin-bundle-analyzer": "^1.6.6",
 		"turbo": "^2.1.1",
 		"typescript": "^5.6.2",
+		"unplugin-auto-import": "^0.18.2",
+		"unplugin-vue-components": "^0.27.4",
 		"vconsole": "^3.15.1",
 		"vite": "^5.4.4",
 		"vite-plugin-compression": "^0.5.1",
