--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build-gzip": "vite build --mode gzip",
 		"build-analyze": "vite build --mode analyzer",
 		"preview": "vite preview",
+		"bootstrap": "pnpm install",
 		"update": "pnpm update",
 		"biome": "biome check --write --unsafe --no-errors-on-unmatched",
 		"prepare": "husky"
