--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"preview": "vite preview",
 		"bootstrap": "pnpm install",
 		"update": "pnpm update",
-		"biome": "biome check --write --unsafe --no-errors-on-unmatched",
+		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+		"format": "prettier --write src/",
 		"prepare": "husky"
 	},
 	"dependencies": {
@@ -26,15 +27,17 @@
 		"vue-router": "^4.4.4"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.0",
 		"@commitlint/cli": "^19.5.0",
 		"@commitlint/config-conventional": "^19.5.0",
 		"@vant/auto-import-resolver": "^1.2.1",
 		"@vitejs/plugin-vue": "^5.1.3",
 		"amfe-flexible": "^2.2.1",
+		"eslint": "^8.57.0",
+		"eslint-plugin-vue": "^9.26.0",
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
 		"postcss-pxtorem": "^6.1.0",
+		"prettier": "^3.3.2",
 		"rollup-plugin-bundle-analyzer": "^1.6.6",
 		"turbo": "^2.1.2",
 		"typescript": "^5.6.2",
@@ -52,8 +55,9 @@
 		}
 	},
 	"lint-staged": {
-		"*.{js,ts,d.ts,vue,tsx}": [
-			"biome check --write --unsafe --no-errors-on-unmatched"
+		"*.{ts,tsx,vue}": [
+			"pnpm run lint",
+			"pnpm run format"
 		]
 	}
 }
