--- a/package.json
+++ b/package.json
@@ -24,23 +24,26 @@
 		"localforage": "^1.10.0",
 		"vant": "^4.9.5",
 		"vue": "^3.5.4",
-		"vue-router": "^4.4.4"
+		"vue-router": "^4.4.5"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.5.0",
 		"@commitlint/config-conventional": "^19.5.0",
+		"@rushstack/eslint-patch": "^1.10.4",
 		"@vant/auto-import-resolver": "^1.2.1",
 		"@vitejs/plugin-vue": "^5.1.3",
+		"@vue/eslint-config-prettier": "^9.0.0",
+		"@vue/eslint-config-typescript": "^13.0.0",
 		"amfe-flexible": "^2.2.1",
 		"eslint": "^8.57.0",
-		"eslint-plugin-vue": "^9.26.0",
+		"eslint-plugin-vue": "^9.28.0",
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
 		"postcss-pxtorem": "^6.1.0",
-		"prettier": "^3.3.2",
+		"prettier": "^3.3.3",
 		"rollup-plugin-bundle-analyzer": "^1.6.6",
 		"turbo": "^2.1.2",
-		"typescript": "^5.6.2",
+		"typescript": "^5.6.0",
 		"unplugin-auto-import": "^0.18.3",
 		"unplugin-vue-components": "^0.27.4",
 		"vconsole": "^3.15.1",
