--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"@commitlint/config-conventional": "^19.5.0",
 		"@rushstack/eslint-patch": "^1.10.4",
 		"@vant/auto-import-resolver": "^1.2.1",
-		"@vitejs/plugin-vue": "^5.1.3",
+		"@vitejs/plugin-vue": "^5.1.4",
+		"@vitejs/plugin-vue-jsx": "^4.0.1",
 		"@vue/eslint-config-prettier": "^9.0.0",
 		"@vue/eslint-config-typescript": "^13.0.0",
 		"amfe-flexible": "^2.2.1",
