--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"eslint": "^8.57.1",
 		"eslint-plugin-vue": "^9.28.0",
 		"husky": "^9.1.6",
+		"lightningcss": "^1.27.0",
 		"lint-staged": "^15.2.10",
 		"postcss-pxtorem": "^6.1.0",
 		"prettier": "^3.3.3",
