--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@nutui/nutui": "^4.3.13",
 		"axios": "^1.7.7",
 		"bigjs": "^0.0.3",
 		"date-fns": "^3.6.0",
 		"echarts": "^5.5.1",
 		"localforage": "^1.10.0",
-		"vant": "^4.9.7",
 		"vue": "^3.5.8",
 		"vue-router": "^4.4.5"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.5.0",
 		"@commitlint/config-conventional": "^19.5.0",
+		"@nutui/auto-import-resolver": "^1.0.0",
 		"@rushstack/eslint-patch": "^1.10.4",
 		"@vant/auto-import-resolver": "^1.2.1",
 		"@vitejs/plugin-vue": "^5.1.4",
