--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"preview": "vite preview",
 		"bootstrap": "pnpm install",
 		"update": "pnpm update",
-		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+		"lint": "eslint . --ext .vue,.js,.ts,.tsx --fix --ignore-path .gitignore",
 		"format": "prettier --write src/",
 		"prepare": "husky"
 	},
@@ -23,7 +23,7 @@
 		"date-fns": "^3.6.0",
 		"echarts": "^5.5.1",
 		"localforage": "^1.10.0",
-		"vue": "^3.5.9",
+		"vue": "^3.5.12",
 		"vue-router": "^4.4.5"
 	},
 	"devDependencies": {
@@ -38,21 +38,21 @@
 		"@vue/eslint-config-typescript": "^13.0.0",
 		"amfe-flexible": "^2.2.1",
 		"eslint": "^8.57.1",
-		"eslint-plugin-vue": "^9.28.0",
+		"eslint-plugin-vue": "^9.29.0",
 		"husky": "^9.1.6",
 		"lightningcss": "^1.27.0",
 		"lint-staged": "^15.2.10",
 		"postcss-pxtorem": "^6.1.0",
 		"prettier": "^3.3.3",
 		"rollup-plugin-bundle-analyzer": "^1.6.6",
-		"turbo": "^2.1.2",
-		"typescript": "^5.6.2",
+		"turbo": "^2.2.1",
+		"typescript": "^5.6.3",
 		"unplugin-auto-import": "^0.18.3",
 		"unplugin-vue-components": "^0.27.4",
 		"vconsole": "^3.15.1",
-		"vite": "^5.4.8",
+		"vite": "^5.4.9",
 		"vite-plugin-compression": "^0.5.1",
-		"vite-plugin-vue-devtools": "^7.4.6",
+		"vite-plugin-vue-devtools": "^7.5.2",
 		"vue-tsc": "^2.1.6"
 	},
 	"husky": {
