--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"echarts": "^5.6.0",
 		"localforage": "^1.10.0",
 		"vue": "^3.5.13",
-		"vue-router": "^4.5.0"
+		"vue-router": "^4.5.0",
+		"web3": "^4.16.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.7.1",
