feat: 修复notify组件样式没有正确引入的问题

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@ethereumjs/tx": "^5.4.0",
 		"@nutui/nutui": "^4.3.13",
 		"axios": "^1.7.9",
 		"bigjs": "^0.0.3",
