--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"date-fns": "^3.6.0",
 		"echarts": "^5.6.0",
 		"localforage": "^1.10.0",
+		"pinia": "^3.0.1",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0",
 		"web3": "^4.16.0"
