--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"axios": "^1.8.0",
 		"bigjs": "^0.0.3",
 		"bip39": "^3.1.0",
+		"buffer": "^6.0.3",
 		"date-fns": "^3.6.0",
 		"echarts": "^5.6.0",
 		"localforage": "^1.10.0",
