--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 	"dependencies": {
 		"@ethereumjs/tx": "^5.4.0",
 		"@ethereumjs/wallet": "^2.0.4",
-		"@nutui/nutui": "^4.3.13",
-		"axios": "^1.8.4",
+		"axios": "^1.9.0",
 		"bigjs": "^0.0.3",
 		"bip39": "^3.1.0",
 		"buffer": "^6.0.3",
@@ -28,15 +27,16 @@
 		"echarts": "^5.6.0",
 		"localforage": "^1.10.0",
 		"pinia": "^3.0.2",
+		"vant": "^4.9.19",
 		"vue": "^3.5.13",
-		"vue-router": "^4.5.0",
+		"vue-router": "^4.5.1",
 		"web3": "^4.16.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
-		"@nutui/auto-import-resolver": "^1.0.0",
 		"@rushstack/eslint-patch": "^1.11.0",
+		"@vant/auto-import-resolver": "^1.3.0",
 		"@vitejs/plugin-vue": "^5.2.3",
 		"@vitejs/plugin-vue-jsx": "^4.1.2",
 		"@vue/eslint-config-prettier": "^9.0.0",
@@ -50,14 +50,14 @@
 		"postcss-pxtorem": "^6.1.0",
 		"prettier": "^3.5.3",
 		"rollup-plugin-bundle-analyzer": "^1.6.6",
-		"turbo": "^2.5.0",
+		"turbo": "^2.5.2",
 		"typescript": "^5.8.3",
 		"unplugin-auto-import": "^0.18.6",
 		"unplugin-vue-components": "^0.27.5",
 		"vconsole": "^3.15.1",
-		"vite": "^6.3.2",
+		"vite": "^6.3.4",
 		"vite-plugin-compression": "^0.5.1",
-		"vite-plugin-vue-devtools": "^7.7.5",
+		"vite-plugin-vue-devtools": "^7.7.6",
 		"vue-tsc": "^2.2.10"
 	},
 	"husky": {
