--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"localforage": "^1.10.0",
 		"pinia": "^3.0.2",
 		"vant": "^4.9.19",
-		"vue": "^3.5.14",
+		"vue": "^3.5.15",
 		"vue-router": "^4.5.1",
 		"web3": "^4.16.0"
 	},
@@ -60,15 +60,10 @@
 		"vite-plugin-vue-devtools": "^7.7.6",
 		"vue-tsc": "^2.2.10"
 	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
 	"lint-staged": {
 		"*.{ts,tsx,vue}": [
-			"pnpm run lint",
-			"pnpm run format"
+			"eslint --fix",
+			"prettier --write"
 		]
 	}
 }
